@@ -54,6 +54,7 @@
 
     <form id="form_id" class="form_class" name="form_name" action="/">
     </form>
+    <input type="file" name="file_field_name" id="file_field_id" class="file_field_class" title="file_field_title" />
 
     <ul id="ul_id" name="ul_name" class="ul_class">
       <li id="li_id" name="li_name" class="li_class">Item One</li>
