@@ -20,3 +20,4 @@ require 'druid/elements/form.rb'
 require 'druid/elements/option.rb'
 require 'druid/elements/heading.rb'
 require 'druid/elements/paragraph.rb'
+require 'druid/elements/file_field.rb'
